--- a/sharedemo/build.gradle
+++ b/sharedemo/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':jswebview')
+    compile 'com.github.jiyouliang2:QQShare:v1.0.0'
 }
